--- a/package.json
+++ b/package.json
@@ -5,10 +5,21 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.1",
+        "jquery": "^3.6.1",
+        "laravel-datatables-vite": "^0.5.0",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "sass": "^1.56.1",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "datatables.net": "^1.13.1",
+        "datatables.net-dt": "^1.13.1",
+        "select2": "^4.1.0-rc.0",
+        "sweetalert2": "^11.6.14"
     }
 }
